# gymxq

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  report.html  requirements.txt  setup.py  temp.py
gymxq/: __init__.py  constants.py  game.py  utils.py  xiangqi.py
gymxq/envs/: __init__.py  game.py  xiangqi.py
tests/: test_env.py  test_game.py  test_qipu.py  trmp.py
